Adjust CSS to avoid white space and style image box to fit shadow image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     font-family: "Lilita One";
+    height: 100vh;
 }
 
 nav {
@@ -109,7 +110,6 @@ section {
     width: 400px;
     margin-top: 75px;
     border-radius: 10px;
-    min-height: 50%;
 }
 
 #tic-tac-yahoo {
@@ -196,6 +196,62 @@ section {
 .winning-message.show {
     display: flex;
 }
+
+/*CSS for the Game 2!*/
+
+#mario-shadow-quest {
+    background-color: white;
+    padding: 0;
+    margin-top: 200px;
+    padding-bottom: 20px;
+    border-radius: 10px;
+}
+
+.image-box {
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;   
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+}
+
+.options {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    text-align: center;
+    border-radius: 10px;
+
+}
+
+.button-option {
+    font-size: 20px;
+    border: 1px solid black;
+    padding: .25em .5em;
+    cursor: pointer;
+    margin: 0px 100px;
+    border-radius: 10px;
+
+}
+
+#option1 {
+    background-color: red;
+}
+
+#option2 {
+    background-color: #2CB01A;
+}
+
+.button-option button:hover {
+    background-color: black;
+    color: white;
+    border-color: white;
+}
+
 
 
 footer {
